restructured the book

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,5 +11,6 @@ rmd_files: [
   "step-by-step.Rmd",
   "golem.Rmd",
   "prototyping-fakir-shinipsum.Rmd",
-  "tools.Rmd"
+  "tools.Rmd",
+  "optimizing.Rmd"
 ]
