small structure update

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -9,6 +9,7 @@ rmd_files: [
   "big-shiny.Rmd",
   "challenges.Rmd", 
   "step-by-step.Rmd",
+  "structure.Rmd",
   "golem.Rmd",
   "prototyping-fakir-shinipsum.Rmd",
   "tools.Rmd",
