--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -7,11 +7,19 @@ output_dir: "docs"
 rmd_files: [
   "index.rmd",
   "big-shiny.Rmd",
-  "challenges.Rmd", 
-  "step-by-step.Rmd",
+  "challenges.Rmd",
   "structure.Rmd",
   "golem.Rmd",
+  "workflow.Rmd",
+  "step-by-step-design.Rmd",
+  "step-by-step-prototype.Rmd",
   "prototyping-fakir-shinipsum.Rmd",
-  "tools.Rmd",
-  "optimizing.Rmd"
+  "step-by-step-build.Rmd",
+  "step-by-step-secure.Rmd",
+  "secure.Rmd",
+  "step-by-step-deploy.Rmd",
+  "deploy-with-golem.Rmd",
+  "common-app-caveats.Rmd",
+  "optimizing-shiny-code.Rmd",
+  "javascript.Rmd"
 ]
