--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: r
 
-cache:
-  directories:
-    - $TRAVIS_BUILD_DIR/packrat/src
-    - $TRAVIS_BUILD_DIR/packrat/lib
-  packages: true
+cache: packages
 
+before_install:
+  - Rscript -e 'remotes::install_cran(c("golem"))'
+  
 script:
   - Rscript -e 'bookdown::render_book("index.rmd")'
   
