added travis info

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ language: r
 cache: packages
 
 before_install:
-  - Rscript -e 'remotes::install_cran(c("golem"))'
+  - Rscript -e 'install.packages("remotes")'
+  - Rscript -e 'remotes::install_cran(c("golem", "bookdown"))'
   
 script:
   - Rscript -e 'bookdown::render_book("index.rmd")'
