before and after script

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,9 @@ language:
   ui:
     chapter_name: 'Chapter '
 output_dir: docs/wip
+before_chapter_script: golembuild.R
+after_chapter_script: golemdestroy.R
+edit: https://github.com/ThinkR-open/building-shiny-apps-workflow/pulls
 rmd_files:
 - index.rmd
 - big-shiny.Rmd
