New section: Tools for prototyping
- presenting shinipsum and fakir

issue #24
issue #23

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,7 +5,7 @@ language:
     chapter_name: 'Chapter '
 output_dir: docs/wip
 rmd_files:
-- index.rmd
+- index.Rmd
 - big-shiny.Rmd
 - challenges.Rmd
 - structure.Rmd
