Set DESCRIPTION and travis for CI
- Add DESCRIPTION file so that travis can start
- Add google Analytics to follow visits
- Add css for ThinkR customisation
- Set _bookdown.yml to create in docs/wip
- Complete _output.yml with authors
- Add "edit" link to _output.yml

issue #76

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,4 @@
-book_filename: building-big-shiny-apps
+book_filename: building-shiny-apps-workflow
 delete_merged_file: yes
 language:
   ui:
@@ -7,7 +7,7 @@ output_dir: docs/wip
 before_chapter_script: golembuild.R
 after_chapter_script: golemdestroy.R
 rmd_files:
-- index.rmd
+- index.Rmd
 - big-shiny.Rmd
 - challenges.Rmd
 - structure.Rmd
