--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
       skip-cleanup: true
       github-token: $GITHUB_PAT
       keep-history: true
-      local-dir: docs
+      local-dir: docs/wip
       on:
         branch: master
       skip_cleanup: true
