--- a/_output.yml
+++ b/_output.yml
@@ -1,8 +1,19 @@
 bookdown::gitbook:
-  css: style.css
+  css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
   config:
     toc:
       before: |
         <li><a href="./">Building Big Shiny Apps - A Workflow</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+        <li><a href="https://rtask.thinkr.fr">Rtask on ThinkR</a></li>
+        <li><a href="https://thinkr.fr">Formation avec ThinkR</a></li>
+        <li><a href="https://colinfay.me/">Colin Fay</a></li>
+        <li><a href="https://twitter.com/VincentGuyader">Vincent Guyader</a></li>
+        <li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
+        <li><a href="https://statnmap.com/">Sébastien Rochette</a></li>
+    edit:
+      link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
+      text: "Edit"        
+  includes:
+    in_header: ga.html        
+    
