--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ install:
   - Rscript -e 'remotes::install_cran(c("golem", "bookdown"))'
   
 script:
-  - make html
+  - test $TRAVIS_BRANCH == "wip" && make html_wip
+  - test $TRAVIS_BRANCH == "master" && make html_master
 
 after_success:
+  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "wip" && bash deploy.sh
   - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
+
