--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ install:
   - Rscript -e 'remotes::install_cran(c("golem", "bookdown"))'
   
 script:
-  - test $TRAVIS_BRANCH == "wip" && make html_wip
-  - test $TRAVIS_BRANCH == "master" && make html_master
+  - if [ $TRAVIS_BRANCH == "wip" ] ; then make html_wip;  fi
+  - if [ $TRAVIS_BRANCH == "master" ] ; then make html_master;  fi
 
 after_success:
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "wip" && bash deploy.sh
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash deploy.sh
+  - if ([ $TRAVIS_PULL_REQUEST == "false" ] && [ $TRAVIS_BRANCH == "wip" ]) ; then bash deploy.sh;  fi
+  - if ([ $TRAVIS_PULL_REQUEST == "false" ] && [ $TRAVIS_BRANCH == "master" ]) ; then bash deploy.sh;  fi
+
 
