Add logo and favicon

--- a/_output.yml
+++ b/_output.yml
@@ -15,5 +15,6 @@ bookdown::gitbook:
       link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
       text: "Edit"        
   includes:
-    in_header: ga.html        
+    in_header: ga.html      
+    after_body: gitbook-footer-thinkr.html
     
