switched author list to index.Rmd

--- a/_output.yml
+++ b/_output.yml
@@ -5,12 +5,7 @@ bookdown::gitbook:
       before: |
         <li><a href="./">Building Big Shiny Apps - A Workflow</a></li>
       after: |
-        <li><a href="https://rtask.thinkr.fr">Rtask on ThinkR</a></li>
-        <li><a href="https://thinkr.fr">Formation avec ThinkR</a></li>
-        <li><a href="https://colinfay.me/">Colin Fay</a></li>
-        <li><a href="https://twitter.com/VincentGuyader">Vincent Guyader</a></li>
-        <li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
-        <li><a href="https://statnmap.com/">Sébastien Rochette</a></li>
+        <li><a href="https://rtask.thinkr.fr">A book by the ThinkR team</a></li>
     edit:
       link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
       text: "Edit"        
