--- a/manifest.json
+++ b/manifest.json
@@ -709,36 +709,6 @@
         "Built": "R 3.6.0; x86_64-apple-darwin15.6.0; 2019-04-26 20:04:11 UTC; unix"
       }
     },
-    "config": {
-      "Source": "CRAN",
-      "Repository": "https://cran.rstudio.com/",
-      "GithubRepo": null,
-      "GithubUsername": null,
-      "GithubRef": null,
-      "GithubSha1": null,
-      "description": {
-        "Package": "config",
-        "Type": "Package",
-        "Title": "Manage Environment Specific Configuration Values",
-        "Version": "0.3",
-        "Authors@R": "c(\n  person(\"JJ\", \"Allaire\", role = c(\"aut\", \"cre\"), email = \"jj@rstudio.com\"),\n  person(family = \"RStudio, Inc.\", role = \"cph\"))",
-        "Imports": "yaml (>= 2.1.13)",
-        "Suggests": "testthat, knitr",
-        "Description": "Manage configuration values across multiple environments (e.g.\n  development, test, production). Read values using a function that determines\n  the current environment and returns the appropriate value.",
-        "License": "GPL-3",
-        "URL": "https://github.com/rstudio/config",
-        "BugReports": "https://github.com/rstudio/config/issues",
-        "RoxygenNote": "6.0.1",
-        "VignetteBuilder": "knitr",
-        "NeedsCompilation": "no",
-        "Packaged": "2018-03-27 17:50:45 UTC; jjallaire",
-        "Author": "JJ Allaire [aut, cre],\n  RStudio, Inc. [cph]",
-        "Maintainer": "JJ Allaire <jj@rstudio.com>",
-        "Repository": "CRAN",
-        "Date/Publication": "2018-03-27 20:38:53 UTC",
-        "Built": "R 3.6.0; ; 2019-04-26 20:30:40 UTC; unix"
-      }
-    },
     "covr": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com/",
@@ -1393,24 +1363,26 @@
       "description": {
         "Package": "golem",
         "Title": "A Framework for Robust Shiny Applications",
-        "Version": "0.1.0",
-        "Authors@R": "\n    c(person(given = \"Vincent\",\n             family = \"Guyader\",\n             role = c(\"cre\", \"aut\"),\n             email = \"vincent@thinkr.fr\",\n             comment = c(ORCID = \"0000-0003-0671-9270\")),\n      person(given = \"Colin\",\n             family = \"Fay\",\n             role = \"aut\",\n             email = \"contact@colinfay.me\",\n             comment = c(ORCID = \"0000-0001-7343-1846\")),\n      person(given = \"Sébastien\",\n             family = \"Rochette\",\n             role = \"aut\",\n             email = \"sebastien@thinkr.fr\",\n             comment = c(ORCID = \"0000-0002-1565-9313\")),\n      person(given = \"Cervan\",\n             family = \"Girard\",\n             role = \"aut\",\n             email = \"cervan@thinkr.fr\",\n             comment = c(ORCID = \"0000-0002-4816-4624\")),\n      person(given = \"Novica\",\n             family = \"Nakov\",\n             role = \"ctb\",\n             email = \"nnovica@gmail.com\"),\n      person(given = \"ThinkR\",\n             role = \"cph\"))",
+        "Version": "0.1",
+        "Authors@R": "\n    c(person(given = \"Vincent\",\n             family = \"Guyader\",\n             role = c(\"cre\", \"aut\"),\n             email = \"vincent@thinkr.fr\",\n             comment = c(ORCID = \"0000-0003-0671-9270\")),\n      person(given = \"Colin\",\n             family = \"Fay\",\n             role = \"aut\",\n             email = \"contact@colinfay.me\",\n             comment = c(ORCID = \"0000-0001-7343-1846\")),\n      person(given = \"Sébastien\",\n             family = \"Rochette\",\n             role = \"aut\",\n             email = \"sebastien@thinkr.fr\",\n             comment = c(ORCID = \"0000-0002-1565-9313\")),\n      person(given = \"Cervan\",\n             family = \"Girard\",\n             role = \"aut\",\n             email = \"cervan@thinkr.fr\",\n             comment = c(ORCID = \"0000-0002-4816-4624\")),\n      person(given = \"ThinkR\",\n             role = \"cph\"))",
         "Description": "An opinionated framework for building a\n    production-ready 'Shiny' application. This package contains a series\n    of tools for building a robust 'Shiny' application from start to\n    finish.",
         "License": "MIT + file LICENSE",
         "URL": "https://github.com/ThinkR-open/golem",
         "BugReports": "https://github.com/ThinkR-open/golem/issues",
         "Depends": "R (>= 3.0)",
-        "Imports": "attempt (>= 0.3.0),\ncli,\nconfig,\ncrayon,\ndesc,\ndockerfiler,\nfs,\nglue,\nhere,\nhtmltools,\njsonlite,\nmagrittr,\npkgload,\npurrr,\nremotes,\nrlang,\nroxygen2,\nrsconnect,\nrstudioapi,\nshiny,\nstats,\ntestthat,\ntools,\nusethis,\nutils,\nyaml,\nyesno",
-        "Suggests": "covr,\ndevtools,\nknitr,\npkgdown,\nrcmdcheck,\nrmarkdown,\nspelling,\nstringr,\nwithr",
+        "Imports": "attempt, cli, crayon, desc, dockerfiler, DT, glue, htmltools,\npkgload, processx, remotes, rlang, roxygen2, rsconnect,\nrstudioapi, shiny, stats, stringr, testthat, tools, usethis,\nutils, yesno",
+        "Suggests": "covr, knitr, pkgdown, purrr, rcmdcheck, rmarkdown, withr",
         "VignetteBuilder": "knitr",
         "Encoding": "UTF-8",
-        "Language": "en-US",
         "LazyData": "true",
-        "Roxygen": "list(markdown = TRUE)",
         "RoxygenNote": "6.1.1",
-        "Author": "Vincent Guyader [cre, aut] (<https://orcid.org/0000-0003-0671-9270>),\n  Colin Fay [aut] (<https://orcid.org/0000-0001-7343-1846>),\n  Sébastien Rochette [aut] (<https://orcid.org/0000-0002-1565-9313>),\n  Cervan Girard [aut] (<https://orcid.org/0000-0002-4816-4624>),\n  Novica Nakov [ctb],\n  ThinkR [cph]",
+        "NeedsCompilation": "no",
+        "Packaged": "2019-07-19 09:00:08 UTC; Vincent",
+        "Author": "Vincent Guyader [cre, aut] (<https://orcid.org/0000-0003-0671-9270>),\n  Colin Fay [aut] (<https://orcid.org/0000-0001-7343-1846>),\n  Sébastien Rochette [aut] (<https://orcid.org/0000-0002-1565-9313>),\n  Cervan Girard [aut] (<https://orcid.org/0000-0002-4816-4624>),\n  ThinkR [cph]",
         "Maintainer": "Vincent Guyader <vincent@thinkr.fr>",
-        "Built": "R 3.6.0; ; 2019-11-29 08:52:01 UTC; unix"
+        "Repository": "CRAN",
+        "Date/Publication": "2019-08-05 15:50:02 UTC",
+        "Built": "R 3.6.0; ; 2019-08-06 17:39:20 UTC; unix"
       }
     },
     "goodpractice": {
@@ -1482,36 +1454,6 @@
         "Repository": "CRAN",
         "Date/Publication": "2019-03-25 19:50:02 UTC",
         "Built": "R 3.6.0; ; 2019-04-26 19:50:48 UTC; unix"
-      }
-    },
-    "here": {
-      "Source": "CRAN",
-      "Repository": "https://cran.rstudio.com/",
-      "GithubRepo": null,
-      "GithubUsername": null,
-      "GithubRef": null,
-      "GithubSha1": null,
-      "description": {
-        "Package": "here",
-        "Title": "A Simpler Way to Find Your Files",
-        "Version": "0.1",
-        "Authors@R": "person(\"Kirill\", \"Müller\", role = c(\"aut\", \"cre\"), email = \"krlmlr+r@mailbox.org\")",
-        "Description": "Constructs paths to your project's files.\n    The 'here()' function uses a reasonable heuristics to find your project's\n    files, based on the current working directory at the time when the package\n    is loaded. Use it as a drop-in replacement for 'file.path()', it will always\n    locate the files relative to your project root.",
-        "Imports": "rprojroot (>= 1.2)",
-        "License": "GPL-3",
-        "Encoding": "UTF-8",
-        "LazyData": "true",
-        "Date": "2017-05-27",
-        "URL": "https://github.com/krlmlr/here, http://krlmlr.github.io/here",
-        "BugReports": "https://github.com/krlmlr/here/issues",
-        "RoxygenNote": "6.0.1",
-        "NeedsCompilation": "no",
-        "Packaged": "2017-05-27 20:53:11 UTC; muelleki",
-        "Author": "Kirill Müller [aut, cre]",
-        "Maintainer": "Kirill Müller <krlmlr+r@mailbox.org>",
-        "Repository": "CRAN",
-        "Date/Publication": "2017-05-28 06:13:04 UTC",
-        "Built": "R 3.6.0; ; 2019-04-26 21:09:17 UTC; unix"
       }
     },
     "highr": {
@@ -3910,7 +3852,7 @@
       "checksum": "1811cf01d50c24a3d9f1626d3e96991b"
     },
     "build-golem.html": {
-      "checksum": "856902e4f6e1cc3d73e28d72923e48ef"
+      "checksum": "dd40e36b18be3617f877812c143b626c"
     },
     "build-with-golem.Rmd": {
       "checksum": "9de9a6c9c477f38d0783b2c9cb05fc26"
@@ -3934,7 +3876,7 @@
       "checksum": "7077c70020e6d959ca04e9e58c100d39"
     },
     "deploy-golem.html": {
-      "checksum": "1d61c04d28bd8bf0018d3ccec1239561"
+      "checksum": "a2c9b64a915caca55ef4a2df40f15d38"
     },
     "deploy-with-golem.Rmd": {
       "checksum": "87895cfb8b2a727aebe815106b9f58aa"
@@ -4251,8 +4193,8 @@
     "docs/workflow.html": {
       "checksum": "9bb50d8a3f7a7efad9e589398e1b8c2e"
     },
-    "file894132d73969.html": {
-      "checksum": "513dbf1ee99a42935f0630c3eba1e5f2"
+    "file8d9d45dc611d.html": {
+      "checksum": "97b52fb42f6093dc471fd94870dc84b9"
     },
     "ga.html": {
       "checksum": "7e9e2b5472f7a37286cd20dcd16dff53"
@@ -4261,7 +4203,7 @@
       "checksum": "7a8493c46ec5b633be3241b1f092976a"
     },
     "golem.html": {
-      "checksum": "a440a767d06531c38441068b8f812195"
+      "checksum": "d506ad6720fb960cee003b637845f22f"
     },
     "golem.Rmd": {
       "checksum": "c98b81cc496caffcdf5411888067460e"
@@ -4291,7 +4233,7 @@
       "checksum": "1ef72c4b170711ecd159e01e93de0de6"
     },
     "introduction.html": {
-      "checksum": "af5ff4d98e9ba08ee1f5a68ceae6d808"
+      "checksum": "b8dbe6569b536bb1b34feb74546330d0"
     },
     "javascript.Rmd": {
       "checksum": "17c16ef421ad894fdc5948668cfafaef"
@@ -4348,16 +4290,16 @@
       "checksum": "2c358034cbf2d380b4e1d1cb715d04ea"
     },
     "optim-caveat.html": {
-      "checksum": "e2707378bda92352eb02e7f624a80dd7"
+      "checksum": "5e039eef666c46210a3c44db3658c302"
     },
     "optimizing-shiny-code.html": {
-      "checksum": "1e738365c6b4d9981a37565c0788c2aa"
+      "checksum": "7490e31beaec0dfd2504a6e6c6889ec2"
     },
     "optimizing-shiny-code.Rmd": {
       "checksum": "34de137124865109db926bbdda5d4387"
     },
     "optimjs.html": {
-      "checksum": "e22641fa7dcdd13a25e375044feeabeb"
+      "checksum": "cffdd70b37fbc0fb20079f270b736ac4"
     },
     "packages.bib": {
       "checksum": "f352352421083902595cf641805758bd"
@@ -4412,9 +4354,6 @@
     },
     "packrat/desc/commonmark": {
       "checksum": "9185e6d30f52f4a45e76fe40c9eddd0d"
-    },
-    "packrat/desc/config": {
-      "checksum": "99cc7f90a3aff10241695409f98a1851"
     },
     "packrat/desc/covr": {
       "checksum": "a7073f1e3877f9a1c4439da7657e3975"
@@ -4480,16 +4419,13 @@
       "checksum": "3239fcf5b116b176a3b7c12335047333"
     },
     "packrat/desc/golem": {
-      "checksum": "33e28ba6e58b01e2b04fa75291b8ffca"
+      "checksum": "30573b13ad09df4f0d17d6177f980ace"
     },
     "packrat/desc/goodpractice": {
       "checksum": "8ef160fcf7b2520e0248e88acd7503ad"
     },
     "packrat/desc/gtable": {
       "checksum": "500a690fcdf70a6711e8a5a298f85e4e"
-    },
-    "packrat/desc/here": {
-      "checksum": "399f93b07df8a51b2a2f76e2701b52f2"
     },
     "packrat/desc/highr": {
       "checksum": "f89d838a931be8f6aa0f402f038a2d8d"
@@ -4738,16 +4674,16 @@
       "checksum": "42e12e4cc19c4759dca5c1d9df2df8d7"
     },
     "packrat/packrat.lock": {
-      "checksum": "3bfbf79a53b2686d620253a97e3a7f08"
+      "checksum": "9ef1d275fddfa552249f15ce6103165c"
     },
     "planning.html": {
-      "checksum": "049a2c3eb06cbd1e66bdb77ade05cd1b"
+      "checksum": "2ae985e0ccc8e4f1794752dcc7ec4a98"
     },
     "preamble.tex": {
       "checksum": "1fd1a3c59e951f9f95b6b39785d600ff"
     },
     "proto.html": {
-      "checksum": "541efd4ecf50081c4eb601ac8e0d510c"
+      "checksum": "3084ba2b940efb956726054a70857706"
     },
     "prototyping-fakir-shinipsum.Rmd": {
       "checksum": "b295c93e3549a4d1b942201c066e22b1"
@@ -4762,10 +4698,10 @@
       "checksum": "31add85d53c8fb817243a5b85816a430"
     },
     "rmdfirst.html": {
-      "checksum": "2861bcc046b6e228e0c478ef8fd6b61f"
+      "checksum": "875038ae1dc5efd8ebb9c38c9f993199"
     },
     "secure.html": {
-      "checksum": "75c61120194eee1bad4ebd58d0ef6b51"
+      "checksum": "e71228ac53d44b78a1f2d492266e91ce"
     },
     "secure.Rmd": {
       "checksum": "26363591a58476925174481c23311254"
@@ -4786,28 +4722,28 @@
       "checksum": "5dbf5f50cedf269a7374f7e8bf1e30c5"
     },
     "step-design.html": {
-      "checksum": "749a81759f9dc434a1b8926d4c33fe68"
+      "checksum": "3b0aa65354b0adca5e7a95da42d8e83b"
     },
     "step-secure.html": {
-      "checksum": "280a493d2e6bb26178c1db4915802869"
+      "checksum": "55ad783ff23e3fece8b1b114ab35c1c5"
     },
     "stepbuild.html": {
-      "checksum": "ec480328c3c036bfbd4726be60981a6f"
+      "checksum": "6d865d41351f82571c9052c1ca85d642"
     },
     "stepdeploy.html": {
-      "checksum": "4eca93b87dbfdaa7c087858eb235e9a4"
+      "checksum": "fc3a9093387ed2af19c6d3f9bbfd990f"
     },
     "stepprotopype.html": {
-      "checksum": "efd0e68515ca8f814af7da147ccdf8f3"
+      "checksum": "2a6dab66b49ea7f8b8eb78f523f657c3"
     },
     "structure.html": {
-      "checksum": "385b696dd2e7d6429585f1c176d6f2f9"
+      "checksum": "7453d8c9a3f61bc613c47364a85c03ea"
     },
     "structure.Rmd": {
       "checksum": "f0236b43b1038a16e8c6c7a10a46bccc"
     },
     "successfulshinyapp.html": {
-      "checksum": "fe98969e2d13fb71236d701079ff0036"
+      "checksum": "ff6e60f8483db1f4ade354162abc4b2c"
     },
     "Untitled": {
       "checksum": "379ec0d5587795cede0ac7c291f3b3bd"
@@ -4816,16 +4752,16 @@
       "checksum": "e0fedbb3c4a995aa921fff82ca2ae217"
     },
     "uxmatters.html": {
-      "checksum": "eb4810654ee474147800dbce9985ad82"
+      "checksum": "56d151c269f35f0d902816863add4e36"
     },
     "when_optimize.Rmd": {
       "checksum": "a0a1b9594b65df3d4e49d985effb7c73"
     },
     "when-optimize.html": {
-      "checksum": "00c3db5ef4ba54af5f00967826667817"
+      "checksum": "b717499180a9f9db7e502726f8537451"
     },
     "workflow.html": {
-      "checksum": "c23130b41675bdcba62bc11ea69db0b9"
+      "checksum": "cde324427003c0c25d789a5c07f4f6b3"
     },
     "workflow.Rmd": {
       "checksum": "7e61e4e83cb896f22b30c57dade08a4c"
