Add cloc to description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Imports:
 Remotes: 
     ColinFay/tidytuesday201942,
     MangoTheCat/packageMetrics2,
+    hrbrmstr/cloc,
     ThinkR-open/golem
 Encoding: UTF-8
 LazyData: true
