--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -16,7 +16,7 @@ rmd_files:
 - ux-matters.Rmd
 - step-by-step-design.Rmd
 - step-by-step-prototype.Rmd
-- rmd-first.Rmd
+- prototyping-rmd-first.Rmd
 - prototyping-fakir-shinipsum.Rmd
 - step-by-step-build.Rmd
 - step-by-step-secure.Rmd
