Review big-shiny.Rmd
*big-shiny.Rmd*
- Reword first sentences of paragraph to target the aim of the paragraph
- Remove notions of "simple", "easy"
- Shorten sentences
- Remove superlatives : "very strict"
- Expand verbs reduction: don't => do not, it's => it is, ...
- Repeat words instead of "these means", "reducing it", ...=> Reducing
complexity means ...
- Move types of complexity to higher title level
- Move Balancing complexity to higher title level

*Others*
- Run dev_history.R to update dependencies in DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,21 +35,28 @@ Imports:
     cli,
     cloc,
     cyclocomp,
+    desc,
+    dichromat,
     dplyr,
     fs,
     glue,
     htmltools,
     knitr,
     magrittr,
+    matlab,
+    nter,
     packageMetrics2,
+    purrr,
     remotes,
     shiny,
-    tidytuesday201942, 
-    namer
+    tibble,
+    tidytuesday201942,
+    tools,
+    viridis
 Remotes: 
     ColinFay/tidytuesday201942,
-    MangoTheCat/packageMetrics2,
     hrbrmstr/cloc,
+    MangoTheCat/packageMetrics2,
     ThinkR-open/golem
 Encoding: UTF-8
 LazyData: true
