Review planning-ahead
- Extend all 's, 're, 'll
- Make sure first sentence gives the core of the paragraph ideas
- Divide last paragraph into two roles: supervisor and dev

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,21 +35,36 @@ Imports:
     cli,
     cloc,
     cyclocomp,
+    DBI,
+    desc,
+    dichromat,
     dplyr,
     fs,
+    ggplot2,
     glue,
     htmltools,
     knitr,
     magrittr,
+    matlab,
+    memoise,
+    microbenchmark,
+    nter,
     packageMetrics2,
+    purrr,
+    Rcpp,
     remotes,
+    RSQLite,
     shiny,
-    tidytuesday201942, 
-    namer
+    tibble,
+    tictoc,
+    tidytuesday201942,
+    tools,
+    viridis
 Remotes: 
     ColinFay/tidytuesday201942,
-    MangoTheCat/packageMetrics2,
     hrbrmstr/cloc,
+    JohnCoene/nter,
+    MangoTheCat/packageMetrics2,
     ThinkR-open/golem
 Encoding: UTF-8
 LazyData: true
