test deploy travis

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,8 @@ Depends:
     bookdown,
     golem
 Imports: 
+    attachment,
+    bench,
     cli,
     cloc,
     cyclocomp,
@@ -42,19 +44,16 @@ Imports:
     fs,
     ggplot2,
     glue,
+    here,
     htmltools,
     knitr,
     magrittr,
     matlab,
     memoise,
-    microbenchmark,
     nter,
     packageMetrics2,
     purrr,
     Rcpp,
-    nter,
-    packageMetrics2,
-    purrr,
     remotes,
     RSQLite,
     shiny,
