upgrade travis R version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: r
 cache: packages
-dist: xenial
+dist: bionic
 sudo: required
   
 env:
   global:
   - MAKEFLAGS="-j 2"
+  
+matrix:
+  include:
+  - r: 3.6
   
 install:
   - Rscript -e 'install.packages("remotes")'
