--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     cyclocomp,
     DBI,
     desc,
+    devtools,
     dichromat,
     dplyr,
     fs,
@@ -47,6 +48,7 @@ Imports:
     here,
     htmltools,
     knitr,
+    lubridate,
     magrittr,
     matlab,
     memoise,
