Install before compile

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
   
 install:
   - Rscript -e 'install.packages("remotes")'
-  - Rscript -e 'remotes::install_cran(c("golem", "bookdown"))'
+  - Rscript -e 'remotes::install_local()'
   
 script:
   - if [ $TRAVIS_BRANCH == "wip" ] ; then make html_wip;  fi
