Remove the use of memoise for rds files
- update travis.yml with new denomination

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: r
 cache: packages
+os: linux
 dist: bionic
-sudo: required
   
 env:
   global:
   - MAKEFLAGS="-j 2"
   
-matrix:
+jobs:
   include:
   - r: 3.6
   
