Travis: force install

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
   
 install:
   - Rscript -e 'install.packages("remotes")'
-  - Rscript -e 'remotes::install_local()'
+  - Rscript -e 'remotes::install_local(force = TRUE)'
   
 script:
   - if [ $TRAVIS_BRANCH == "wip" ] ; then make html_wip;  fi
