--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ jobs:
   - r: 3.6
   
 install:
+  - rm -R cache
   - Rscript -e 'install.packages("remotes")'
   - Rscript -e 'remotes::install_local(force = TRUE)'
   
