rm cache if exists

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
   - r: 3.6
   
 install:
-  - rm -R cache
+  - Rscript -e 'if(dir.exists("cache")){unlink("cache")}'
   - Rscript -e 'install.packages("remotes")'
   - Rscript -e 'remotes::install_local(force = TRUE)'
   
