--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
 install:
   - Rscript -e 'if(dir.exists("cache")){unlink("cache")}'
   - Rscript -e 'install.packages("remotes")'
+  - Rscript -e 'remotes::install_github("ThinkR-open/golem")'
   - Rscript -e 'remotes::install_local(force = TRUE)'
   
 script:
