Why not future, who knows...

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,8 +29,7 @@ Description: Open source book on R for reproducible, robust and
     maintanable Shiny applications.
 License: file LICENSE
 Depends: 
-    bookdown,
-    golem
+    bookdown
 Imports: 
     attachment,
     bench,
@@ -43,8 +42,10 @@ Imports:
     dichromat,
     dplyr,
     fs,
+    future,
     ggplot2,
     glue,
+    golem,
     here,
     htmltools,
     knitr,
@@ -52,7 +53,6 @@ Imports:
     magrittr,
     matlab,
     memoise,
-    nter,
     packageMetrics2,
     purrr,
     Rcpp,
@@ -68,7 +68,6 @@ Imports:
 Remotes: 
     ColinFay/tidytuesday201942,
     hrbrmstr/cloc,
-    JohnCoene/nter,
     MangoTheCat/packageMetrics2,
     ThinkR-open/golem
 Encoding: UTF-8
