Update gitignore with book files
- Correct reference to prototype
- Verified last 100 commits for potential loss: OK
- prototyping-fakir-shinipsum was previously included in
step-by-step-prototype. It can be removed.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ fcache/
 load_server_docker.R
 library/
 rstudio_prefs
+building-shiny-apps-workflow.Rmd
+building-shiny-apps-workflow_*
+building-shiny-apps-workflow.*.md
+golex/
