Switch to CRC-PRESS templates
- CRC PRESS HTML template, with supplemental ThinkR css
- CRC PRESS PDF template
- CRC PRESS EPUB template
- Auto-publication of PDF and EPUB **not** set in Travis
- Rename book to "engineering-production-grade-shiny-apps"
- Update README

closes #115

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ fcache/
 load_server_docker.R
 library/
 rstudio_prefs
-building-shiny-apps-workflow.Rmd
-building-shiny-apps-workflow_*
-building-shiny-apps-workflow.*.md
+building-shiny-apps-workflow*
+!building-shiny-apps-workflow.Rproj
+engineering-production-grade-shiny-apps*
+!engineering-production-grade-shiny-apps.Rproj
 golex/
