--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,13 @@
-book_filename: building-shiny-apps-workflow
+book_filename: engineering-production-grade-shiny-apps
+clean: [packages.bib, bookdown.bbl]
 delete_merged_file: yes
 language:
+  label:
+    fig: "FIGURE "
+    tab: "TABLE "
   ui:
-    chapter_name: 'Chapter '
+    edit: "Edit"
+    chapter_name: "Chapter "
 output_dir: docs/wip
 before_chapter_script: golembuild.R
 after_chapter_script: golemdestroy.R
