--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Compendium
 Package: building.shiny.apps.workflow
-Title: Building Big Shiny Apps - A Workflow
+Title: Engineering Production-Grade Shiny Apps - A Workflow
 Version: 0.0.1
 Authors@R: 
     c(person(given = "Colin",
@@ -26,8 +26,8 @@ Authors@R:
       person(given = "ThinkR",
              role = "cph"))
 Description: Open source book on R for reproducible, robust and
-    maintanable Shiny applications.
-License: file LICENSE
+    maintanable Shiny applications for production.
+License: MIT + file LICENSE
 Depends: 
     bookdown
 Imports: 
