--- a/_output.yml
+++ b/_output.yml
@@ -2,14 +2,36 @@ bookdown::gitbook:
   css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
   config:
     toc:
+      collapse: none
       before: |
-        <li><a href="./">Building Big Shiny Apps - A Workflow</a></li>
+        <li><a href="./">Engineering Production-Grade Shiny Apps</a></li>
       after: |
         <li><a href="https://rtask.thinkr.fr">A book by the ThinkR team</a></li>
+    download: [pdf, epub]
     edit:
       link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
-      text: "Edit"        
+      text: "Edit"       
+    sharing:
+      github: true
+      facebook: false
   includes:
     in_header: ga.html      
     after_body: gitbook-footer-thinkr.html
-    
+bookdown::pdf_book:
+  includes:
+    in_header: latex/preamble.tex
+    before_body: latex/before_body.tex
+    after_body: latex/after_body.tex
+  keep_tex: true
+  dev: "cairo_pdf"
+  latex_engine: xelatex
+  citation_package: natbib
+  template: null
+  pandoc_args: --top-level-division=chapter
+  toc_depth: 3
+  toc_unnumbered: false
+  toc_appendix: true
+  quote_footer: ["\\VA{", "}{}"]
+  highlight_bw: true
+bookdown::epub_book:
+  stylesheet: css/style.css
