re-read 8 to 12

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -22,7 +22,7 @@ rmd_files:
 - 07-step-by-step-design.Rmd
 - 08-css.Rmd
 - 09-step-by-step-prototype.Rmd
-- 10-prototyping-rmd-first.Rmd
+- 10-prototyping.Rmd
 - 11-step-by-step-build.Rmd
 - 12-step-by-step-secure.Rmd
 - 13-secure.Rmd
