Update file to allow compilation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,44 +31,64 @@ License: MIT + file LICENSE
 Depends: 
     bookdown
 Imports: 
+    askpass,
     attachment,
     bench,
     cli,
     cloc,
+    crrry,
     cyclocomp,
     DBI,
     desc,
     devtools,
     dichromat,
+    dockerfiler,
+    dockerstats,
     dplyr,
+    DT,
+    fakir,
     fs,
     future,
     ggplot2,
+    git2r,
     glue,
-    golem,
+    golem (>= 0.2.1),
     here,
     htmltools,
+    httpuv,
+    jsonlite,
     knitr,
     lubridate,
     magrittr,
     matlab,
     memoise,
     packageMetrics2,
+    pagedown,
     purrr,
     Rcpp,
     readr,
     remotes,
+    renv,
     RSQLite,
+    scales,
+    shinipsum,
     shiny,
+    shinyloadtest,
     tibble,
     tictoc,
     tidytuesday201942,
     tools,
-    viridis
+    usethis,
+    viridis,
+    xfun
 Remotes: 
     ColinFay/tidytuesday201942,
     hrbrmstr/cloc,
     MangoTheCat/packageMetrics2,
-    ThinkR-open/golem
+    ThinkR-open/shinipsum,
+    ThinkR-open/fakir,
+    ColinFay/crrry,
+    ColinFay/dockerstats,
+    rstudio/shinyloadtest
 Encoding: UTF-8
 LazyData: true
