Reading of 12-step-by-step-secure.Rmd

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,7 @@ Imports:
     golem (>= 0.2.1),
     here,
     htmltools,
-    httpuv,
+    httpuv (>= 1.5.2),
     jsonlite,
     knitr,
     lubridate,
