--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports:
     fs,
     future,
     ggplot2,
+    ggbeeswarm,
     glue,
     golem,
     here,
@@ -54,6 +55,7 @@ Imports:
     matlab,
     memoise,
     packageMetrics2,
+    profmem,
     purrr,
     Rcpp,
     readr,
