--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,7 +66,8 @@ Imports:
     tictoc,
     tidytuesday201942,
     tools,
-    viridis
+    viridis,
+    liteq
 Remotes: 
     ColinFay/tidytuesday201942,
     hrbrmstr/cloc,
