test git actions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,3 +75,5 @@ Remotes:
     ThinkR-open/golem
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
+BugReports: https://github.com/ThinkR-open/building-shiny-apps-workflow/issues
