--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,12 +67,36 @@ Imports:
     tidytuesday201942,
     tools,
     viridis,
-    liteq
+    liteq,
+    shinipsum (>= 0.0.0.9000),
+    rmarkdown,
+    DT,
+    fakir,
+    crrry,
+    httpuv,
+    pagedown,
+    shinyloadtest,
+    dockerstats,
+    scales,
+    dockerfiler,
+    jsonlite,
+    namer,
+    renv,
+    attempt,
+    rstudioapi,
+    usethis,
+    xfun,
+    config,
+    git2r,
+    rsconnect
 Remotes: 
     ColinFay/tidytuesday201942,
+    ColinFay/dockerstats,
+    ColinFay/crrry,
     hrbrmstr/cloc,
     MangoTheCat/packageMetrics2,
-    ThinkR-open/golem
+    ThinkR-open/golem,
+    Thinkr-open/shinipsum
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
