added fakir remotes to DESCRIPTION

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install rmarkdown
-        run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
+        run: Rscript -e 'install.packages(c("rmarkdown","bookdown"), Ncpus = 4)'
       - name: Install local deps
-        run: Rscript -e 'install.packages("remotes");remotes::install_local()'
+        run: Rscript -e 'install.packages("remotes", Ncpus = 4);remotes::install_local(Ncpus = 4)'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
       - uses: actions/upload-artifact@v1
