--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -95,6 +95,7 @@ Remotes:
     ColinFay/crrry,
     hrbrmstr/cloc,
     MangoTheCat/packageMetrics2,
+    ThinkR-open/fakir,
     ThinkR-open/golem,
     Thinkr-open/shinipsum
 Encoding: UTF-8
