--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,7 +8,7 @@ language:
   ui:
     edit: "Edit"
     chapter_name: "Chapter "
-output_dir: docs/wip
+output_dir: _book
 before_chapter_script: golembuild.R
 after_chapter_script: golemdestroy.R
 rmd_files:
