--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,6 @@
 bookdown::gitbook:
   css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
+  toc_depth: 1
   config:
     toc:
       collapse: none
@@ -7,7 +8,6 @@ bookdown::gitbook:
         <li><a href="./">Engineering Production-Grade Shiny Apps</a></li>
       after: |
         <li><a href="https://rtask.thinkr.fr">A book by the ThinkR team</a></li>
-    download: [pdf, epub]
     edit:
       link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
       text: "Edit"       
