docker run hello-world

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install docker
         run: |
           brew install docker-machine docker
-          sudo docker –version
+          docker run hello-world
       - name: Pull docker image
         run: docker pull colinfay/hexmake:latest
       - name: Install rmarkdown
