--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -9,15 +9,15 @@ name: renderbook
 jobs:
   bookdown:
     name: Render-Book
-    runs-on: macOS-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
       - name: Install docker
         run: |
-          brew install docker-machine docker
-          docker run hello-world
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sh get-docker.sh
       - name: Pull docker image
         run: docker pull colinfay/hexmake:latest
       - name: Install rmarkdown
