--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -20,6 +20,11 @@ jobs:
           sh get-docker.sh
       - name: Pull docker image
         run: docker pull colinfay/hexmake:latest
+      - name: deps
+        run: |
+          apt-get update && apt-get install -y  \ 
+          git-core libcairo2-dev libcurl4-openssl-dev \
+          libssh2-1-dev libssl-dev libxml2-dev make pandoc pandoc-citeproc zlib1g-dev
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"), Ncpus = 4)'
       - name: Install local deps
