added all refs to packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,7 @@ Imports:
     attachment,
     bench,
     cli,
-    cloc,
+    cloc (>= 0.3.0),
     cyclocomp,
     DBI,
     desc,
@@ -54,7 +54,7 @@ Imports:
     magrittr,
     matlab,
     memoise,
-    packageMetrics2,
+    packageMetrics2 (>= 1.0.1.9000),
     profmem,
     purrr,
     Rcpp,
@@ -64,19 +64,19 @@ Imports:
     shiny,
     tibble,
     tictoc,
-    tidytuesday201942,
-    tools,
+    tidytuesday201942 (>= 0.0.0.9000),
+    tools (>= 3.6.1),
     viridis,
     liteq,
     shinipsum (>= 0.0.0.9000),
     rmarkdown,
     DT,
-    fakir,
+    fakir (>= 0.2.0),
     crrry,
     httpuv,
     pagedown,
     shinyloadtest,
-    dockerstats,
+    dockerstats (>= 0.0.0.9000),
     scales,
     dockerfiler,
     jsonlite,
@@ -88,8 +88,37 @@ Imports:
     xfun,
     config,
     git2r,
-    rsconnect
-Remotes: 
+    rsconnect,
+    promises,
+    testthat,
+    hexmake (>= 0.0.0.9000),
+    shinyalert,
+    plotly,
+    shinyMobile,
+    resume (>= 0.0.0.9000),
+    nessy (>= 0.0.0.9001),
+    skeleton (>= 0.0.0.9000),
+    fullPage (>= 0.1.0),
+    bs4Dash,
+    shinydashboardPlus,
+    sf,
+    crrri (>= 0.0.12),
+    chromote (>= 0.0.0.9001),
+    tidyverse,
+    shinytest,
+    processx,
+    geojsonsf,
+    pkgbuild,
+    profvis,
+    gargoyle (>= 0.0.0.9000),
+    dbplyr,
+    vroom,
+    data.table,
+    readxl,
+    R.cache,
+    glouton (>= 0.0.0.9000),
+    bubble (>= 0.0.0.9003)
+Remotes:  
     ColinFay/tidytuesday201942,
     ColinFay/dockerstats,
     ColinFay/crrry,
@@ -97,7 +126,15 @@ Remotes:
     MangoTheCat/packageMetrics2,
     ThinkR-open/fakir,
     ThinkR-open/golem,
-    Thinkr-open/shinipsum
+    Thinkr-open/shinipsum,
+    ColinFay/nessy,
+    colinfay/skeleton,
+    RinteRface/fullPage,
+    RLesur/crrri,
+    rstudio/chromote,
+    ColinFay/gargoyle,
+    colinfay/glouton,
+    colinfay/bubble
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
