before build script

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -19,6 +19,8 @@ jobs:
           brew install docker-machine docker
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"), Ncpus = 4)'
+      - name: Befor build
+        run: Rscript before-build.R
       - name: Install local deps
         run: Rscript -e 'install.packages("remotes", Ncpus = 4);remotes::install_local(upgrade = "never", Ncpus = 4)'
       - name: Render Book
