--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -134,7 +134,9 @@ Remotes:
     rstudio/chromote,
     ColinFay/gargoyle,
     colinfay/glouton,
-    colinfay/bubble
+    colinfay/bubble,
+    colinfay/hexmake,
+    colinfay/resume
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
