--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Install docker
         run: |
           brew install docker-machine docker
+      - name: Install xquartz
+        run: |
+          brew cask install xquartz
+      - name: Install sysfonts
+        run: Rscript -e 'install.packages("sysfonts", Ncpus = 4)'
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"), Ncpus = 4)'
       - name: Befor build
